# amax_recipient

./: CMakeLists.txt  README.md  README.txt
include/: hello_recipient.hpp
src/: CMakeLists.txt  hello_recipient.cpp
